--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Leilões virtuais | Santuário</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="overflow-x-auto w-full"></div>
     <script type="module" src="/src/main.tsx"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </body>
